argocd/v1/argocd-server-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd-server-nodeport
  name: argocd-server-nodeport
  namespace: argocd
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: argocd-server
  sessionAffinity: None
  type: NodePort
